--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="has-background-info-light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/566356fcf2.js" crossorigin="anonymous"></script>`
+    <script src="https://kit.fontawesome.com/566356fcf2.js" crossorigin="anonymous"></script>
     <title>Vite + Vue</title>
   </head>
   <body>
+    <h2 class="has"></h2>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
