--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/566356fcf2.js" crossorigin="anonymous"></script>
-    <title>Vite + Vue</title>
+    <!-- <script src="https://kit.fontawesome.com/566356fcf2.js" crossorigin="anonymous"></script> -->
+    <title>ReVue</title>
   </head>
   <body>
-    <h2 class="has"></h2>
+  
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
